# hackathon-2026-projects

./: .gitignore  AGENTS.md  MEMORY.md  Makefile  README.md  SKILLS.md  docker-compose.dev.yml  docker-compose.prod.yml
projects/Neuraliosis/src/ai/: .gitignore  cli.py  pyproject.toml  requirements.txt  run.py
projects/Neuraliosis/src/ai/agent/: graph.py  state.py
projects/Neuraliosis/src/ai/agent/nodes/: confidence_scorer.py  fitness_permission.py  greeting_responder.py  intent_parser.py  llm_synthesizer.py  question_generator.py  rag_retriever.py
projects/Neuraliosis/src/ai/api/: main.py  sessions.py
projects/Neuraliosis/src/ai/api/routes/: chat.py
projects/Neuraliosis/src/ai/data/: medical_dataset.json  scraper.py
projects/Neuraliosis/src/ai/data/processed/: cdc_activity_guidelines.txt  cdc_adults.txt  cdc_benefits.txt  cdc_healthy-eating.txt  kb_anxiety_exercise_001.txt  kb_back_pain_001.txt  kb_breathing_difficulty_001.txt  kb_chest_pain_exercise_001.txt  kb_dehydration_001.txt  kb_dizziness_general_001.txt  kb_fever_exercise_001.txt  kb_heart_palpitations_001.txt  kb_high_heart_rate_001.txt  kb_hydration_guide_001.txt  kb_joint_pain_001.txt  kb_low_blood_sugar_001.txt  kb_low_energy_001.txt  kb_muscle_soreness_001.txt  kb_nausea_post_exercise_001.txt  kb_nutrition_recovery_001.txt  kb_overexertion_001.txt  kb_poor_sleep_001.txt  medlineplus_anxiety.txt  medlineplus_fitness.txt  (+8 more)
projects/Neuraliosis/src/ai/prompts/: question_generator.txt  synthesizer_system.txt
projects/Neuraliosis/src/ai/rag/: embedder.py  ingest.py  scraper.py  vectorstore.py
(+878 files in other folders)
